arreglo de relacion tablas cliente-Facture

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,9 +3,5 @@ server.port=4002
 spring.datasource.url=jdbc:mysql://localhost:3306/marketplace
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=admin
-=======
-spring.datasource.password=0jb1dbp0
->>>>>>> 99d39c400d634ff1153db399ebeba6b56a034d0f
+spring.datasource.password=diego
 spring.jpa.hibernate.ddl-auto=update
